--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="operador" value="igual">=</button>
         </div>
         <div class="author">
-            <h2>Giselle Difonte</h2>
+            <h2>&COPY; Giselle Difonte</h2>
         </div>
     </div>
 </body>
